fixed layout shift bug and hide scrollbar

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -10384,3 +10384,14 @@ See https://twitter.com/JoshWComeau/status/1332015868725891076
   width: 100%;
   height: 100%;
 }
+
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+  .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+}
+}
